z-index fixed

--- a/assets/css/scroll-animation.css
+++ b/assets/css/scroll-animation.css
@@ -40,7 +40,7 @@
   bottom: 0;
   background: black;
   color: white;
-  z-index: 9;
+  z-index: 100;
 }
 
 .demo-wrapper {
